# HitagiEngine

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MyTidy.cpp  README.md  build_bullet3.bat  build_bullet3.sh  build_zlib.bat  cmake-format.yaml  hitagi.json  link-error.txt  shader-error.txt  vcpkg.json  xmake.lua
Examples/Game1/: CMakeLists.txt  DLCharacter.cpp  DLCharacter.hpp  MyGame.cpp  MyGame.hpp  MyGameConfig.cpp  MyTest.cpp  MyTest.hpp  MyTestConfig.cpp
Examples/Game1/MANN/: CMakeLists.txt  MANN.cpp  MANN.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  DebugManager.cpp  DebugManager.hpp  GameLogic.cpp  GameLogic.hpp  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  Timer.cpp  Timer.hpp  main.cpp  portable.hpp
Framework/Common/test/: CMakeLists.txt
Framework/GeomMath/: CMakeLists.txt  aabb.hpp  geommath.hpp  geommath_ispc.hpp
Framework/GeomMath/include/: AddByElement.h  Addition.h  CrossProduct.h  Division.h  Matrix.h  Multiplication.h  Subtraction.h  Vector.h
Framework/GeomMath/ispc/: AddByElement.ispc  Addition.ispc  CMakeLists.txt  CrossProduct.ispc  DCT.ispc  DCT8x8.ispc  Matrix.ispc  Multiplication.ispc  Subtraction.ispc
Framework/Parser/: Assimp.cpp  Assimp.hpp  BMP.cpp  BMP.hpp  CMakeLists.txt  FBX.cpp  FBX.hpp  FBXParser.hpp  JPEG.cpp  JPEG.hpp  OGEX.cpp  OGEX.hpp  PNG.cpp  PNG.hpp  TGA.cpp  TGA.hpp
Game/MyTest/: CMakeLists.txt  MyTest.cpp  MyTest.hpp  MyTestConfig.cpp
Hitagi/AssetManager/Parser/: Assimp.cpp  Assimp.hpp  BMP.cpp  BMP.hpp  BVH.cpp  BVH.hpp  BvhParser.cpp  BvhParser.hpp  CMakeLists.txt  ImageParser.hpp  JPEG.cpp  JPEG.hpp  MoCapParser.hpp  MotionParser.hpp  PNG.cpp  PNG.hpp  SceneParser.hpp  TGA.cpp  TGA.hpp
Hitagi/Core/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  FileIOManager.cpp  FileIOManager.hpp  GeomMath.hpp  HitagiMath.hpp  MemoryManager.cpp  MemoryManager.hpp  ThreadManager.cpp  ThreadManager.hpp  Timer.cpp  Timer.hpp  Utils.hpp  main.cpp  portable.hpp
Hitagi/Core/GeomMath/: Absolute.ispc  CMakeLists.txt  Division.ispc  GeomMath_ispc.hpp  Integral.ispc  Matrix.ispc  MaxMin.ispc  Subtraction.ispc  Vector.ispc  geommath_ispc.hpp
Hitagi/Core/Geometries/: Box.cpp  Geometry.cpp  Geometry.hpp  Plane.hpp  Sphere.hpp  aabb.hpp
Hitagi/Core/HitagiMath/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  HitagiMath.hpp  Matrix.hpp  Primitive.hpp  Vector.hpp
Hitagi/Core/Math/: Matrix.hpp  Vector.hpp
Hitagi/GUI/: CMakeLists.txt  Editor.cpp  Editor.hpp  GuiManager.cpp  GuiManager.hpp  ImGuiKeyMaps.hpp  imconfig.hpp
Hitagi/Graphics/: CMakeLists.txt  DriverAPI.hpp  Format.hpp  Frame.cpp  Frame.hpp  FrameGraph.cpp  FrameGraph.hpp  FramePass.hpp  GraphicsManager.cpp  GraphicsManager.hpp  ICommandContext.hpp  PipelineState.cpp  PipelineState.hpp  RenderPass.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderManager.cpp  ShaderManager.hpp  Types.hpp
Hitagi/Graphics/D3D/: CMakeLists.txt  CommandAllocatorPool.cpp  CommandAllocatorPool.hpp  CommandContext.cpp  CommandContext.hpp  CommandListManager.cpp  CommandListManager.hpp  D3D12GraphicsManager.cpp  D3D12GraphicsManager.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.hpp  FrameResource.hpp  GpuBuffer.cpp  GpuBuffer.hpp  GpuResource.hpp  LinearAllocator.cpp  LinearAllocator.hpp  PipeLineState.cpp  PipeLineState.hpp  RootSignature.cpp  RootSignature.hpp  d3dUtil.cpp  d3dUtil.hpp
Hitagi/Graphics/DX12/: Allocator.cpp  Allocator.hpp  CMakeLists.txt  ColorBuffer.cpp  ColorBuffer.hpp  CommandAllocatorPool.cpp  CommandAllocatorPool.hpp  CommandContext.cpp  CommandContext.hpp  CommandListManager.cpp  CommandListManager.hpp  D3D12GraphicsManager.cpp  D3D12GraphicsManager.hpp  D3DCore.cpp  D3DCore.hpp  D3Dpch.hpp  DX12DriverAPI.cpp  DX12DriverAPI.hpp  DXHelper.hpp  DepthBuffer.cpp  DepthBuffer.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.hpp  EnumConverter.hpp  FrameResource.hpp  GpuBuffer.cpp  GpuBuffer.hpp  GpuResource.hpp  LinearAllocator.cpp  LinearAllocator.hpp  PSO.cpp  PSO.hpp  PipeLineState.cpp  PipeLineState.hpp  PixelBuffer.cpp  PixelBuffer.hpp  RaytracingHelper.cpp  RaytracingHelper.hpp  (+8 more)
Hitagi/Graphics/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Hitagi/Math/: CMakeLists.txt
Hitagi/Math/ispc/: vector.ispc
Hitagi/Platform/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  main.cpp
Platform/: CMakeLists.txt
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp  EmptyApplication.hpp  EmptyApplicationConfig.cpp
Platform/Linux/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  helloengine_xcb  helloengine_xcb.cpp
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  D3d12ApplicationConfig.cpp  GLFWApplication.cpp  GLFWApplication.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  WindowsApplicationConfig.cpp
Test/: AssetLoaderTest.cpp  BufferTest.cpp  BulletTest.cpp  CMakeLists.txt  ColorSpaceConversionTest.cpp  DX12Test.cpp  FBXTest.cpp  FileIOManagerTest.cpp  GraphicsTest.cpp  ImageParserTest.cpp  JpegParserTest.cpp  MathTest.cpp  OgexParserTest.cpp  PngParserTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  TextBitmapTest.cpp  TgaParserTest.cpp  ThreadPoolTest.cpp  TimerTest.cpp
Test/DX12/: CMakeLists.txt  ContextTest.cpp
hitagi/core/test/: xmake.lua  (+7 more)
hitagi/utils/: CMakeLists.txt  xmake.lua
(+710 files in other folders)
