set(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}GeomMath${CMAKE_STATIC_LIBRARY_SUFFIX})
if(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
    set(ISPC_COMPILER ispc.exe)
    if(NOT ${CMAKE_CROSSCOMPILING})
        set(ISPC_OPTIONS --arch=x86-64 --target=host)
        set(CMAKE_AR lib)
        set(ISPC_LIBRARIAN_OPTIONS /MACHINE:X64 /OUT:${GEOMMATH_LIB_FILE})
    ELSE()
        set(ISPC_OPTIONS --arch=arm --cpu=cortex-a9 --target=neon-i32x4)
        set(CMAKE_AR ${SNC_TOOLCHAIN_DIR}psp2snarl -rcv ${GEOMMATH_LIB_FILE})
    endif()
elseif(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
    set(ISPC_COMPILER ispc)
    set(ISPC_OPTIONS --pic --arch=x86-64)
    set(ISPC_LIBRARIAN_OPTIONS -rcv -o ${GEOMMATH_LIB_FILE})
endif()
set(ISPC_OPTIONS ${ISPC_OPTIONS} -O2 --woff)
add_subdirectory(ispc)
set(GEOMMATH_LIB_HEADER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_library(GeomMath STATIC IMPORTED GLOBAL)
target_include_directories(GeomMath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
add_dependencies(GeomMath GeomMathLib)
set_target_properties(GeomMath
    PROPERTIES
    IMPORTED_LOCATION ${GEOMMATH_LIB_FILE}
)    