add_library(MyGameEngineD3D12
    WindowsApplication.cpp
    WindowsApplicationConfig.cpp
)
target_link_libraries(MyGameEngineD3D12
    PUBLIC
        Common
        D3DRHI
)
add_library(MyGameEngineOpenGL
    GLFWApplication.cpp
    OpenGLApplication.cpp
    OpenGLApplicationConfig.cpp
)
target_link_libraries(MyGameEngineOpenGL
    PUBLIC
        Common
        OpenGLRHI
    PRIVATE
        glfw
)