add_library(HitagiGameEngineD3D12
    WindowsApplication.cpp
    WindowsApplicationConfig.cpp
)
target_link_libraries(HitagiGameEngineD3D12
    PUBLIC
        Common
        D3DRHI
)
add_library(HitagiGameEngineOpenGL
    GLFWApplication.cpp
    OpenGLApplication.cpp
    OpenGLApplicationConfig.cpp
)
target_link_libraries(HitagiGameEngineOpenGL
    PUBLIC
        Common
        OpenGLRHI
    PRIVATE
        glfw
)