add_library(D3DRHI
    D3DCore.cpp
    D3D12GraphicsManager.cpp
    CommandListManager.cpp
    CommandAllocatorPool.cpp
    GpuBuffer.cpp
    CommandContext.cpp
    LinearAllocator.cpp
    DescriptorAllocator.cpp
    DynamicDescriptorHeap.cpp
    RootSignature.cpp
    PipelineState.cpp
)
target_link_libraries(D3DRHI
    PRIVATE
        d3d12
        dxgi
        d3dcompiler
        GLFWApplication
    PUBLIC
        GraphicsManager
)
target_include_directories(D3DRHI INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
